Bug 408344 - [text-editor] Entering white text is difficult
Summary: [text-editor] Entering white text is difficult
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-05 13:34 UTC by David REVOY
Modified: 2019-06-05 13:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2019-06-05 13:34:47 UTC
Hi,

Since https://cgit.kde.org/krita.git/commit/?id=3bdfef28120e46bfb982035142e5683dcea44d39 (the background of the text editor is now white) it is difficult to enter white texts. 

To reproduce:
1. Select white color
2. Add a text

Result:
You can't see what you type or what text you are adding.

Proposal:
Use the "Editor Background color" (in text dialog: Settings→Color Tab→'Editor Background:') or use an alpha/transparency checkboard as background?
Comment 1 Halla Rempt 2019-06-05 13:55:02 UTC
Git commit e3afe228cff4f295c780fd87396a91365b09326d by Boudewijn Rempt.
Committed on 05/06/2019 at 13:54.
Pushed by rempt into branch 'master'.

Honor the setting for the editor background color

M  +0    -1    plugins/tools/svgtexttool/SvgRichTextCtrl.cpp
M  +0    -1    plugins/tools/svgtexttool/SvgRichTextCtrl.h
M  +6    -0    plugins/tools/svgtexttool/SvgTextEditor.cpp
M  +1    -1    plugins/tools/svgtexttool/WdgSvgTextEditor.ui

https://invent.kde.org/kde/krita/commit/e3afe228cff4f295c780fd87396a91365b09326d