Honor the setting for the editor background color

BUG:408344